# OpenGL-Skeleton-Animation

./: .gitignore  Dockerfile  README.md  build.sh  run.sh
hello_animation/: CMakeLists.txt  Makefile  ReadMe.md
hello_animation/include/: array.h  buffer.h  camera.h  err.h  input.h  mesh.h  model.h  program.h  scene.h  shader.h  stbimg_wrapper.h  texture_manager.h  timer.h  typedef.h  util.h
hello_animation/include/glad/: glad.h
hello_animation/resource/: model.frag  model.vert
hello_animation/src/: array.cc  buffer.cc  camera.cc  glad.cc  main.cc  mesh.cc  model.cc  program.cc  scene.cc  shader.cc  stbimg_wrapper.cc  texture_manager.cc  timer.cc
